compiler/flux_hir/src/tests/snapshots/flux_hir__tests__resolution__errors_apply_to_private_struct.snap
---
source: compiler/flux_hir/src/tests/resolution.rs
expression: s
---
Module Id Map

0 -> 2


Item Tree

File Id:  ./main.flx
Module Id: 0

File Id:  ./foo.flx
Module Id: 2



Diagnostics

[E0014] Error: cannot access private path segment
   ,-[ ./main.flx:7:8]
   |
 7 | apply Bar to foo::Foo {}
   |        ^^^^|^|^^  
   |            `------ cannot access private path segment in path `foo::Foo`
   |              |    
   |              `---- private segment `Foo`
---'

