compiler/flux_hir/src/tests/snapshots/flux_hir__tests__resolution__errors_assign_var_with_private_struct.snap
---
source: compiler/flux_hir/src/tests/resolution.rs
expression: s
---
Module Id Map

0 -> 2


Item Tree

File Id:  ./main.flx
Module Id: 0

fn main() -> () {
let x foo::Foo = struct foo::Foo {

};
}

File Id:  ./foo.flx
Module Id: 2



Diagnostics

[E0014] Error: cannot access private path segment
   ,-[ ./main.flx:6:6]
   |
 6 |     let x foo::Foo = foo::Foo {};
   |      ^^^^|^|^^  
   |          `------ cannot access private path segment in path `foo::Foo`
   |            |    
   |            `---- private segment `Foo`
---'
[E0014] Error: cannot access private path segment
   ,-[ ./main.flx:6:17]
   |
 6 |     let x foo::Foo = foo::Foo {};
   |                 ^^^^|^|^  
   |                     `----- cannot access private path segment in path `foo::Foo`
   |                       |   
   |                       `--- private segment `Foo`
---'

