compiler/flux_hir/src/tests/snapshots/flux_hir__tests__resolution__errors_unresolved_type_in_apply.snap
---
source: compiler/flux_hir/src/tests/resolution.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0



Diagnostics

[E0033] Error: unresolved type
   ,-[ main.flx:5:10]
   |
 5 | apply Foo to Bar {}
   |          ^^|^  
   |            `--- unresolved type `Bar`
---'

