compiler/flux_hir/src/tests/snapshots/flux_hir__tests__resolution__errors_use_private_mod.snap
---
source: compiler/flux_hir/src/tests/resolution.rs
expression: s
---
Module Id Map

0 -> 2
2 -> 3


Item Tree

File Id:  ./main.flx
Module Id: 0

fn main() -> () {

}

File Id:  ./foo.flx
Module Id: 2

File Id:  ./foo/bar.flx
Module Id: 3

pub fn test() -> () {

}



Diagnostics

[E0014] Error: cannot access private path segment
   ,-[ ./main.flx:5:1]
   |
 5 | use foo::bar;
   | ^^^^|^|^  
   |     `----- cannot access private path segment in path `foo::bar`
   |       |   
   |       `--- private segment `bar`
---'

