compiler/flux_hir/src/tests/snapshots/flux_hir__tests__resolution__unresolved_type.snap
---
source: compiler/flux_hir/src/tests/resolution.rs
expression: s
---
//  main.flx

trait Foo  {
    
    
}

apply Foo to Bar {
    
    
}

fn main() -> () {
    let x Bar = struct Bar {      };
}

Diagnostics

[E0032] Error: unresolved type
   ,-[ main.flx:5:10]
   |
 5 | apply Foo to Bar {}
   |          ^^|^  
   |            `--- unresolved type `Bar`
---'
[E0032] Error: unresolved type
   ,-[ main.flx:8:4]
   |
 8 |     let x Bar = Bar {};
   |    ^^|^  
   |      `--- unresolved type `Bar`
---'
[E0033] Error: unresolved struct
   ,-[ main.flx:8:10]
   |
 8 |     let x Bar = Bar {};
   |          ^|^  
   |           `--- unresolved struct `Bar`
---'

